...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    android:id="@+id/dialog_fragment">

    <LinearLayout
        android:id="@+id/filter_meetings_linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
...
            android:inputType="date"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/filter_meetings_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
...
